--- a/src/components/TextInput/styles.css
+++ b/src/components/TextInput/styles.css
@@ -1,7 +1,7 @@
 .text-input {
   font-family: 'Poppins', sans-serif;
   width: 100%;
-  font-size: 28px;
+  font-size: 1.3rem;
   padding: 10px 15px;
   border-radius: 5px;
   border: 2px solid rgb(224, 224, 224);
